edited our 'picture' code due to file name change

--- a/team8styles.css
+++ b/team8styles.css
@@ -36,6 +36,6 @@ h8{
 
 /* This is where Xinyu's work Starts!*/
 h4{
-    color:#00fff;
+    color:#00ffff; 
 }
 /* This is where Xinyu's work end.*/
