Added bootstrap elements + background image :)

--- a/team8styles.css
+++ b/team8styles.css
@@ -2,7 +2,7 @@
 /* STYLESHEET TXT FILE TO MAKE GROUP CHANGES */
 /* WE CAN ALL AGREE ON A COLOR FOR THE PAGE. LAVENDER IS JUST TEMPORARY COLOR */
 body{
-    background-color: lavender;
+    background-color: peachpuff;
 }
 
 
